# ePBR

./: CMakeLists.txt  README.md
Analytics/Performance/: 25 Spheres.txt  Model Comparison.txt
PGG_ShadersIntro/: Main.cpp  Scene.cpp
PGG_ShadersIntro/Debug/: PGG_ShadersIntro.exe.recipe  vc143.idb
PGG_ShadersIntro/Debug/PGG_ShadersIntro.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PGG_ShadersIntro.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
data/models/sphere/: triangulated.mtl
data/shaders/: BlinnPhong.frag  BlinnPhong.vert  PBR.frag  PBR.vert  PBRCombo(UNUSED).frag  PBRDirectLighting.frag  PBRFrag.txt  PBRIBL.frag  PBRNoSamplers.frag  PBRVert.txt  fragShader.txt
data/shaders/environment_mapping/: ConvoluteCubemap.frag  EquirectangularToCubemap.frag  EquirectangularToCubemap.vert  IntegrationMap.frag  IntegrationMap.vert  Skybox.frag  Skybox.vert  SpecularPrefilter.frag
data/textures/EnvironmentMaps/: reference.txt
lib/Windows-x64/: assimp-vc143-mt.exp
src/demo/: main.cpp
src/ePBR/: Context.cpp  Context.h  CubeMap.cpp  CubeMap.h  GameObject.cpp  GameObject.h  LegacyMaterial.cpp  LegacyMaterial.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PBRMaterial.cpp  PBRMaterial.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  ePBR.h
